# MaraTON_Contest_Solution

./: .gitignore  CMakeLists.txt  README.md  analyse.cpp  analyse2.cpp  assemble_submit_file.py  build_dict.cpp  build_huffman.cpp  build_rANS.cpp  compressor.hpp  dictionary.hpp  encode_array.cpp  huffman.hpp  lz_compressor_bits.hpp  main.cpp  rANS.hpp  raw_notes.txt  run_tests.py  serializator.h  serializator.hpp  suff_aut.hpp  suff_aut_bits.hpp  utils.h  utils_local.hpp
code-examples/: 03 - TLB.cpp
